Bug 1683188 - BrowserChild::MakeHidden() shouldn't mess with tab state. r=nika, a=jcristau

I flagged this as sketchy before (though it was trying to preserve
existing behavior).

However now that that state propagates to the parent process and races
with the state that the parent process reads, it started causing
correctness issues.

Just remove this line, it shouldn't be needed. I'm not sure how to write
a test for this, unfortunately :(

Differential Revision: https://phabricator.services.mozilla.com/D100971